Премахва брандинг от панела с функционалности

--- a/index.html
+++ b/index.html
@@ -30,6 +30,73 @@
       </aside>
 
       <div class="content-grid">
+        <section class="panel marketing-panel">
+          <h2>Функционалности за администриране на работни графици</h2>
+          <p>
+            Ефективно планирате и разпределяте работните графици на вашите служители в пълно съответствие с българското
+            законодателство.
+          </p>
+
+          <div class="marketing-columns">
+            <article>
+              <h3>Богата функционалност за смени и разписания</h3>
+              <ul>
+                <li>Динамично изчисляване на месечна норма и отчитане на дневни, нощни и извънредни часове за всеки служител.</li>
+                <li>Предварително създадени шаблони (разписания) за лесно разпределяне на работните смени.</li>
+                <li>Администрирате неограничен брой смени, според спецификите на работния режим.</li>
+                <li>Определяте поредност на смените и цикъл на тяхната повторяемост.</li>
+                <li>Планирате групово разписанията за целия екип или индивидуално чрез персонален план.</li>
+                <li>Данните за отпуски, болнични, обучения и други отсъствия се виждат директно в графика на служителя.</li>
+                <li>Разполагате с динамична визуализация на броя служители в една и съща смяна за конкретен календарен ден.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>Автоматични контроли за съответствие</h3>
+              <ul>
+                <li>Междусменни почивки.</li>
+                <li>Междуседмични почивки.</li>
+                <li>Ограничаване на работните смени до 12 часа.</li>
+                <li>Максимален обем на извънредния труд до 30 часа на месец.</li>
+                <li>Общи контроли за работното време на служител за всички негови назначения.</li>
+              </ul>
+            </article>
+          </div>
+
+          <h3>Ползи</h3>
+          <div class="benefits-grid">
+            <article>
+              <h4>Човешки ресурси</h4>
+              <ul>
+                <li>Администриране според законодателни изисквания.</li>
+                <li>Автоматични проверки при приключване на периода на СИРВ.</li>
+                <li>Оптимизация на извънредния труд.</li>
+              </ul>
+            </article>
+            <article>
+              <h4>Мениджър</h4>
+              <ul>
+                <li>Гъвкаво управление на работните графици на служителите.</li>
+                <li>Актуална информация за работното време на планираните работни екипи.</li>
+                <li>Следене на месечна норма.</li>
+              </ul>
+            </article>
+            <article>
+              <h4>Служител</h4>
+              <ul>
+                <li>Удобен индивидуален календар с визуализация на планирани и отработени смени.</li>
+                <li>Навременно известяване за промени в работния график.</li>
+                <li>Бързи справки и заявки.</li>
+              </ul>
+            </article>
+          </div>
+
+          <p class="marketing-note">
+            Платформата е изградена модулно — използвате нужните функционалности сега и добавяте нови възможности
+            според развитието на организацията.
+          </p>
+        </section>
+
         <section id="scheduleTab" class="panel tab-panel active">
           <h2>Месечен график</h2>
           <div class="row">
