Добавя таб Настройки за видимост на обобщените колони

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <button type="button" class="tab-btn" data-tab="employeesTab">Служители</button>
           <button type="button" class="tab-btn" data-tab="vacationTab">Отпуски</button>
           <button type="button" class="tab-btn" data-tab="rulesTab">Изчисления</button>
+          <button type="button" class="tab-btn" data-tab="settingsTab">Настройки</button>
           <button type="button" class="tab-btn" data-tab="helpTab">FAQ / Help</button>
         </div>
       </aside>
@@ -101,6 +102,12 @@
           </form>
           <div id="shiftList" class="shift-list"></div>
           <small>Смените „Почивка“, „Отпуск“ и „Болничен“ са системни и не се трият.</small>
+        </section>
+
+        <section id="settingsTab" class="panel tab-panel">
+          <h2>Настройки</h2>
+          <p>Изберете кои обобщени полета да се показват в графика:</p>
+          <div id="summarySettingsList" class="settings-list"></div>
         </section>
 
         <section id="helpTab" class="panel tab-panel marketing-panel">
