Add multi-department monthly schedule view and API

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <span id="lockStatus" class="lock-status">Статус: Отключен</span>
           </div>
           <div id="monthInfo" class="month-info"></div>
+          <div class="row">
+            <label for="departmentSelect">Отдел</label>
+            <select id="departmentSelect" multiple></select>
+            <button id="showDepartmentsBtn" type="button">Покажи</button>
+          </div>
           <div class="legend" id="shiftLegend"></div>
           <div class="table-wrap">
             <table id="scheduleTable"></table>
