Fix department action button layout and colors

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h2>Отдели</h2>
           <form id="departmentForm" class="row">
             <input id="departmentNameInput" required placeholder="Име на отдел" />
-            <button type="submit">Добави отдел</button>
+            <button type="submit" class="btn-add">Добави отдел</button>
           </form>
           <div id="departmentList" class="employee-list"></div>
         </section>
