--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <input id="positionInput" required placeholder="Длъжност" />
             <input id="egnInput" required maxlength="10" pattern="\d{10}" placeholder="ЕГН (10 цифри)" />
             <input id="vacationAllowanceInput" type="number" min="0" value="20" required placeholder="Годишен отпуск" />
-            <button type="submit">Добави служител</button>
+            <button type="submit" class="btn-add">Добави служител</button>
           </form>
           <div id="employeeList" class="employee-list"></div>
         </section>
@@ -98,7 +98,7 @@
           <h2>Отдели</h2>
           <form id="departmentForm" class="row">
             <input id="departmentNameInput" required placeholder="Име на отдел" />
-            <button type="submit">Добави отдел</button>
+            <button type="submit" class="btn-add">Добави отдел</button>
           </form>
           <div id="departmentList" class="employee-list"></div>
         </section>
