Expand FAQ/Help with full platform usage guide

--- a/index.html
+++ b/index.html
@@ -158,69 +158,123 @@
         </section>
 
         <section id="helpTab" class="panel tab-panel marketing-panel">
-          <h2>Функционалности за администриране на работни графици</h2>
+          <h2>FAQ / Help — пълни инструкции за работа с платформата</h2>
           <p>
-            Ефективно планирате и разпределяте работните графици на вашите служители в пълно съответствие с българското
-            законодателство.
+            Тази секция описва подробно как се работи с всички налични функционалности: първоначална настройка, отдели,
+            служители, графици, отпуски, изчисления, заключване, експорт и поддръжка. Ползвайте я като вътрешно ръководство
+            за администратори, HR и ръководители на екипи.
           </p>
 
-          <div class="marketing-columns">
+          <div class="marketing-columns help-columns">
             <article>
-              <h3>Богата функционалност за смени и разписания</h3>
+              <h3>1) Първо стартиране и връзка с API</h3>
+              <ol>
+                <li>Отворете платформата и проверете статуса под заглавието.</li>
+                <li>Въведете валиден <strong>API URL</strong> (пример: <code>http://46.183.117.128:4000</code>).</li>
+                <li>Натиснете <strong>„Свържи“</strong>.</li>
+                <li>При успешна връзка всички данни (служители, графици, отпуски, смени) се синхронизират от бекенда.</li>
+              </ol>
+              <p><strong>Важно:</strong> при липса на връзка платформата продължава да работи с локално съхранени данни.</p>
+            </article>
+
+            <article>
+              <h3>2) Отдели — структура на организацията</h3>
               <ul>
-                <li>Динамично изчисляване на месечна норма и отчитане на дневни, нощни и извънредни часове за всеки служител.</li>
-                <li>Предварително създадени шаблони (разписания) за лесно разпределяне на работните смени.</li>
-                <li>Администрирате неограничен брой смени, според спецификите на работния режим.</li>
-                <li>Определяте поредност на смените и цикъл на тяхната повторяемост.</li>
-                <li>Планирате групово разписанията за целия екип или индивидуално чрез персонален план.</li>
-                <li>Данните за отпуски, болнични, обучения и други отсъствия се виждат директно в графика на служителя.</li>
-                <li>Разполагате с динамична визуализация на броя служители в една и съща смяна за конкретен календарен ден.</li>
+                <li>В таб <strong>„Отдели“</strong> добавяте нов отдел по име.</li>
+                <li>Смяна на име става с клик върху името на отдела.</li>
+                <li>Изтриване е възможно само ако няма служители в този отдел.</li>
+                <li>Създадените отдели се използват във всички останали модули (служители и графици).</li>
               </ul>
             </article>
 
             <article>
-              <h3>Автоматични контроли за съответствие</h3>
+              <h3>3) Служители — въвеждане и поддръжка</h3>
               <ul>
-                <li>Междусменни почивки.</li>
-                <li>Междуседмични почивки.</li>
-                <li>Ограничаване на работните смени до 12 часа.</li>
-                <li>Максимален обем на извънредния труд до 30 часа на месец.</li>
-                <li>Общи контроли за работното време на служител за всички негови назначения.</li>
+                <li>Задължителни полета: три имена, длъжност, ЕГН (10 цифри), годишен отпуск.</li>
+                <li>Всеки служител може да бъде асоцииран към отдел от падащото меню.</li>
+                <li>Може да редактирате служител през бутона <strong>„Редакция“</strong>.</li>
+                <li>При изтриване служителят се премахва и от текущия график.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>4) Месечен график — основен работен процес</h3>
+              <ol>
+                <li>Изберете месец от <strong>„Месец“</strong>.</li>
+                <li>Натиснете <strong>„Генерирай календар“</strong>.</li>
+                <li>Изберете отдел за преглед или създайте нов график за отдел чрез <strong>„Създай график“</strong>.</li>
+                <li>Маркирайте кои графици са активни в секцията <strong>„Покажи графици за месеца“</strong>.</li>
+                <li>За всеки служител задавайте смени по дни чрез падащите менюта в таблицата.</li>
+              </ol>
+            </article>
+
+            <article>
+              <h3>5) Отпуски</h3>
+              <ul>
+                <li>Изберете служител и период (начална и крайна дата).</li>
+                <li>Натиснете <strong>„Маркирай отпуск“</strong>.</li>
+                <li>Системата пази хронология на отпуските в секцията под формата.</li>
+                <li>Отпуските участват в обобщенията и визуализацията на графика.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>6) Настройки → Изчисления</h3>
+              <ul>
+                <li>Настройвате коефициенти за почивен ден и официален празник.</li>
+                <li>Задавате период на СИРВ (1–6 месеца).</li>
+                <li>Месечната норма и извънредният труд се изчисляват автоматично в обобщенията.</li>
+                <li>Нощният труд (22:00–06:00) се приравнява с действащия коефициент.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>7) Настройки → Смени</h3>
+              <ul>
+                <li>Добавяте персонализирани смени с код, име, начален и краен час.</li>
+                <li>Наличните смени се показват като легенда в графика.</li>
+                <li>Системните смени „Почивка“, „Отпуск“ и „Болничен“ не могат да бъдат изтрити.</li>
+                <li>При изтриване на потребителска смяна, кодът се заменя автоматично там, където е използван.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>8) Заключване и експорт</h3>
+              <ul>
+                <li><strong>„Заключи графика“</strong> спира редакции за текущия месец.</li>
+                <li><strong>„Отключи графика“</strong> връща възможността за промени.</li>
+                <li>Експортите <strong>Excel</strong> и <strong>PDF</strong> генерират текущата таблица за отчет и архив.</li>
               </ul>
             </article>
           </div>
 
-          <h3>Ползи</h3>
-          <div class="benefits-grid">
+          <h3>Често задавани въпроси (FAQ)</h3>
+          <div class="benefits-grid faq-grid">
             <article>
-              <h4>Човешки ресурси</h4>
-              <ul>
-                <li>Администриране според законодателни изисквания.</li>
-                <li>Автоматични проверки при приключване на периода на СИРВ.</li>
-                <li>Оптимизация на извънредния труд.</li>
-              </ul>
+              <h4>Защо не виждам служител в графика?</h4>
+              <p>
+                Проверете дали служителят е към отдел, за който има активен график в текущия месец, и дали самият график е
+                маркиран за показване.
+              </p>
             </article>
             <article>
-              <h4>Мениджър</h4>
-              <ul>
-                <li>Гъвкаво управление на работните графици на служителите.</li>
-                <li>Актуална информация за работното време на планираните работни екипи.</li>
-                <li>Следене на месечна норма.</li>
-              </ul>
+              <h4>Защо поле не се редактира?</h4>
+              <p>
+                Най-честата причина е заключен месец. Проверете статуса до бутоните за заключване/отключване.
+              </p>
             </article>
             <article>
-              <h4>Служител</h4>
-              <ul>
-                <li>Удобен индивидуален календар с визуализация на планирани и отработени смени.</li>
-                <li>Навременно известяване за промени в работния график.</li>
-                <li>Бързи справки и заявки.</li>
-              </ul>
+              <h4>Какво да правя при промяна в екипа по средата на месеца?</h4>
+              <p>
+                Добавете или редактирайте служителя в таб „Служители“, след което актуализирайте смените му в текущия график.
+              </p>
             </article>
           </div>
 
           <p class="marketing-note">
-            Платформата е изградена модулно — използвате нужните функционалности сега и добавяте нови възможности
-            според развитието на организацията.
+            <strong>Политика за бъдещи промени:</strong> при добавяне на нова функционалност или промяна на съществуваща,
+            актуализирайте този FAQ/Help <strong>веднага в същия release</strong> с: цел, стъпки за работа, ограничения,
+            примерен сценарий и кой модул е засегнат. Това е задължително изискване за поддръжка на платформата.
           </p>
         </section>
       </div>
