Add TELK option to employees and vacation allowance logic

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <label class="field-inline">Начална дата <input id="startDateInput" type="date" required /></label>
             <label class="field-inline">Последен работен ден <input id="endDateInput" type="date" /></label>
             <input id="vacationAllowanceInput" type="number" min="0" value="20" required placeholder="Годишен отпуск" />
+            <label class="field-inline field-checkbox"><input id="telkInput" type="checkbox" /> ТЕЛК (+6 дни отпуск)</label>
             <button type="submit" class="btn-add">Добави служител</button>
           </form>
           <div id="employeeList" class="employee-list"></div>
@@ -298,6 +299,7 @@
           <label class="field-inline">Начална дата <input id="editStartDateInput" type="date" required /></label>
           <label class="field-inline">Последен работен ден <input id="editEndDateInput" type="date" /></label>
           <input id="editVacationAllowanceInput" type="number" min="0" required placeholder="Годишен отпуск" />
+          <label class="field-inline field-checkbox"><input id="editTelkInput" type="checkbox" /> ТЕЛК (+6 дни отпуск)</label>
           <div class="modal-actions">
             <button type="submit">Запази</button>
             <button id="cancelEmployeeEditBtn" type="button">Отказ</button>
