--- a/index.html
+++ b/index.html
@@ -89,8 +89,22 @@
             <label class="field-inline">Начална дата <input id="startDateInput" type="date" required /></label>
             <label class="field-inline">Последен работен ден <input id="endDateInput" type="date" /></label>
             <input id="vacationAllowanceInput" type="number" min="0" value="20" required placeholder="Годишен отпуск" />
-            <label class="field-inline field-checkbox"><input id="telkInput" type="checkbox" /> ТЕЛК (+6 дни отпуск)</label>
-            <label class="field-inline field-checkbox"><input id="youngWorkerInput" type="checkbox" /> 16-18 г. с разрешение от родител и ИТ (+6 дни отпуск)</label>
+            <label class="field-inline field-checkbox">
+              <input id="telkInput" type="checkbox" />
+              <span>ТЕЛК (+6 дни отпуск)</span>
+              <span class="hover-tooltip" tabindex="0" aria-label="Инфо за ТЕЛК">
+                ?
+                <span class="hover-tooltip__text">с 50% и над 50%</span>
+              </span>
+            </label>
+            <label class="field-inline field-checkbox">
+              <input id="youngWorkerInput" type="checkbox" />
+              <span>Служители от 16 - 18 г. (+6 дни отпуск)</span>
+              <span class="hover-tooltip" tabindex="0" aria-label="Инфо за служители от 16 до 18 години">
+                ?
+                <span class="hover-tooltip__text">с разрешение от родител и ИТ</span>
+              </span>
+            </label>
             <button type="submit" class="btn-add">Добави служител</button>
           </form>
           <div id="employeeList" class="employee-list"></div>
@@ -300,8 +314,22 @@
           <label class="field-inline">Начална дата <input id="editStartDateInput" type="date" required /></label>
           <label class="field-inline">Последен работен ден <input id="editEndDateInput" type="date" /></label>
           <input id="editVacationAllowanceInput" type="number" min="0" required placeholder="Годишен отпуск" />
-          <label class="field-inline field-checkbox"><input id="editTelkInput" type="checkbox" /> ТЕЛК (+6 дни отпуск)</label>
-          <label class="field-inline field-checkbox"><input id="editYoungWorkerInput" type="checkbox" /> 16-18 г. с разрешение от родител и ИТ (+6 дни отпуск)</label>
+          <label class="field-inline field-checkbox">
+            <input id="editTelkInput" type="checkbox" />
+            <span>ТЕЛК (+6 дни отпуск)</span>
+            <span class="hover-tooltip" tabindex="0" aria-label="Инфо за ТЕЛК">
+              ?
+              <span class="hover-tooltip__text">с 50% и над 50%</span>
+            </span>
+          </label>
+          <label class="field-inline field-checkbox">
+            <input id="editYoungWorkerInput" type="checkbox" />
+            <span>Служители от 16 - 18 г. (+6 дни отпуск)</span>
+            <span class="hover-tooltip" tabindex="0" aria-label="Инфо за служители от 16 до 18 години">
+              ?
+              <span class="hover-tooltip__text">с разрешение от родител и ИТ</span>
+            </span>
+          </label>
           <div class="modal-actions">
             <button type="submit">Запази</button>
             <button id="cancelEmployeeEditBtn" type="button">Отказ</button>
