Add admin-only employee deletion role guard

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <label for="apiUrlInput">API URL:</label>
         <input id="apiUrlInput" type="text" placeholder="http://46.183.117.128:4000" />
         <button id="saveApiUrlBtn" type="button">Свържи</button>
+        <label for="userRoleSelect">Роля:</label>
+        <select id="userRoleSelect">
+          <option value="user">Потребител</option>
+          <option value="manager">Мениджър</option>
+          <option value="admin">Администратор</option>
+        </select>
       </div>
     </header>
 
